--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         tg.expand();
 
         let userId = tg.initDataUnsafe?.user?.id || "guest";
-        let botToken = "YOUR_BOT_TOKEN";  // Bot tokeningizni shu yerga kiriting
+        let botToken = "7317303145:AAFhzdI7lAgHvmmvS1l92vz-oLnlVH9Mk4A";  // Bot tokeningizni shu yerga kiriting
         let chatId = tg.initDataUnsafe?.user?.id; // Foydalanuvchi ID'si
 
         let balance = parseInt(localStorage.getItem(userId + "_balance")) || 0;
